# CodeDesign

./: .gitignore
.github/workflows/: release.yml
npm/codedesign/: LICENSE  README.md  package.json
rust/: Cargo.toml
rust/assets/craft/: accessibility-baseline.md  animation-discipline.md  anti-ai-slop.json  anti-ai-slop.md  color.md  form-validation.md  laws-of-ux.md  rtl-and-bidi.md  spacing.md  state-coverage.md  typography-hierarchy-editorial.md  typography-hierarchy.md  typography.md
rust/assets/craft/directions/: brutalist.json  neutral-modern.json  soft-playful.json  tech-utility.json  warm-editorial.json
rust/assets/design-systems/default/: DESIGN.md  components.json  constraints.json  patterns.json  tokens.json  voice.md
rust/assets/design-systems/default/cases/: index.json
rust/assets/prompts/: 00-identity.md  01-loop.md  02-ir-contract.md  03-ds-governance.md  04-craft.md  05-direction.md  06-skill.md  07-tools-contract.md  08-cases.md  critique.md  discovery.md
rust/assets/skills/audit/: SKILL.md
rust/assets/skills/screens/: SKILL.md
rust/crates/api/tests/: client_integration.rs
rust/crates/cd-brief/: Cargo.toml
rust/crates/cd-brief/src/: brief.rs  lib.rs  state.rs  vision.rs
rust/crates/cd-canvas/: Cargo.toml
rust/crates/cd-canvas/src/: lib.rs
rust/crates/cd-cli/: Cargo.toml
rust/crates/cd-cli/src/: main.rs
rust/crates/cd-cli/tests/: deepseek_toolcall.rs  plan_case_injection.rs  summarizer_spike.rs
rust/crates/cd-craft/: Cargo.toml
rust/crates/cd-craft/src/: lib.rs
rust/crates/cd-critique/: Cargo.toml
rust/crates/cd-critique/src/: lib.rs  rubric.rs  rules.rs
rust/crates/cd-ds/: Cargo.toml
rust/crates/cd-ds/src/: components.rs  constraints.rs  design_system.rs  error.rs  lib.rs  prompt.rs  tokens.rs
rust/crates/cd-figma-mcp/: Cargo.toml
rust/crates/cd-figma-mcp/src/: auth.rs  client.rs  error.rs  lib.rs  runtime_shim.js  transport.rs
rust/crates/cd-plan/: Cargo.toml
rust/crates/cd-plan/src/: lib.rs
rust/crates/cd-prompts/: Cargo.toml
rust/crates/cd-prompts/src/: lib.rs
rust/crates/cd-skill/: Cargo.toml
rust/crates/cd-skill/src/: lib.rs
rust/crates/cd-summarizer/: Cargo.toml
rust/crates/cd-summarizer/src/: lib.rs
rust/crates/cd-tools/: Cargo.toml
rust/crates/cd-tools/src/: ds_query.rs  ds_validate.rs  figma_nav.rs  lib.rs  prd_parse.rs  todo.rs
rust/evals/phase0/: README.md  report.md
rust/evals/phase0/deepseek-toolcall/: README.md  result.md
rust/evals/phase0/plan-case-injection/: README.md  result.md
rust/evals/phase0/plan-case-injection/output/: READ_ME_samples.md  sample-a.plan.json  sample-a.plan.pretty.json  sample-b.plan.json  sample-b.plan.pretty.json  sample-c.plan.json  sample-c.plan.pretty.json
rust/evals/phase0/plan-case-injection/samples/: sample-a.json  sample-b.json  sample-c.json
rust/evals/phase0/summarizer/: README.md
rust/evals/phase0/summarizer/output/: injection.txt  mock-transcript.txt  summary.json
rust/evals/phase0/use-figma-compiler/: README.md
rust/evals/phase0/use-figma-compiler/cases/: minimal-plan.json
