[package]
name = "cd-brief"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

ureq        = { version = "2", features = ["json"] }
base64      = "0.22"
