[package]
name = "cd-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
regex       = { workspace = true }

cd-ds       = { path = "../cd-ds" }
